# charlottesweb-app

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUSINESS_PLAN.md  DEV_GUIDE.md  OPERATIONS.md  PERFORMANCE.md  README.md  SECURITY.md  SECURITY_FEATURES.md  SECURITY_IMPLEMENTATION.md  SECURITY_KEYS.md  STATUS.md  THREAT_MODEL.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_https.sh  test_e2e.sh  test_nvd.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ticket.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  security-deep-scan.yml  security-scan.yml  sync-lock.yml
demo/: pom.xml.sample
docs/: ANTIPATTERNS_GUIDE.md  ARCHITECTURE_DIAGRAM_VIEWER_SAFE.md  ARCHITECTURE_EXAMPLE.md  INDEX.md  THREAT_MODEL_ARCHITECTURE.md
docs/tickets/: README.md  TICKET_INDEX.md  phase-0-foundation.md  phase-1-intelligence-engine.md  phase-2-audit-evidence.md  phase-3-web-app-workflows.md  phase-4-pilot-readiness.md  phase-5-continuous-monitoring.md
scripts/: create_issues.py  fix_existing_issues.py  generate_dev_certs.sh  remove_emojis.py
src/: __init__.py  ai_threat_model_service.py  api.py  api_client.py  audit.py  cache.py  compliance_as_code.py  compliance_intelligence.py  config.py  constants.py  cwe_mappings.py  database.py  dependabot_service.py  encryption.py  main.py  manifest_parser.py  middleware.py  mitre_service.py  models.py  nvd_service.py  osv_service.py  pagination.py  risk_engine.py  rules_engine.py  schemas.py  security.py  seed.py  threat_model_service.py  utils.py
src/policy_rules/: hipaa_security_rule.v1.json
src/routers/: __init__.py  assessments.py  components.py  controls.py  evidence.py  findings.py  frameworks.py  health.py  metadata_profiles.py  organizations.py  reports.py  risk.py  threat_model.py  vulnerability_analysis.py
static/: index.html
tests/: test_ai_threat_model.py  test_api.py  test_comprehensive.py  test_osv_service.py
