[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charlottesweb"
version = "0.3.0"
description = "Multi-Framework Compliance Intelligence Platform for Regulated Data"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
# Code formatter configuration
# - Line length: 88 chars (Black standard, conventional in Python community)
# - Target Python version: 3.14+
line-length = 88
target-version = ['py312']

# Files/directories to exclude
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
    | \.mypy_cache
    | build
    | dist
)/
'''

[tool.ruff]
# Ruff linter configuration
# - Fast, modern Python linter (Rust-based)
# - Replaces flake8 + isort + many plugins
line-length = 88
target-version = "py312"

# Linting rules to enforce
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (undefined names, unused imports)
    "I",      # isort (import ordering)
    "C90",    # McCabe complexity
    "N",      # pep8-naming
    "UP",     # pyupgrade (use modern Python syntax)
    "B",      # flake8-bugbear (likely bugs)
    "A",      # flake8-builtins (don't shadow builtins)
]

# Rules to ignore (these are opinionated)
ignore = [
    "E501",   # Line too long (handled by Black)
    "B008",   # Do not perform function calls in argument defaults (false positives with FastAPI)
]

# Exclude test files from import sorting (they can have different order)
extend-exclude = [
    "tests",
    ".venv",
    "venv",
]

[tool.ruff.isort]
# Import ordering configuration (isort within ruff)
# Groups: future, stdlib, third-party, first-party, local
known-first-party = ["src"]

[tool.ruff.lint.mccabe]
# McCabe complexity threshold
# - Default is 10, increased to 15 to allow legitimately complex functions
max-complexity = 15

[tool.mypy]
# Type checker configuration
# - Strict mode enabled for comprehensive type coverage
# - Helps catch bugs before runtime

# Python version to target (must be 3.12+ for PEP 695 generic syntax)
python_version = "3.14"

# Strict type checking mode (most restrictive)
strict = true

# Ignore missing imports for packages without type stubs
ignore_missing_imports = true

# Warn about unused type: ignore comments
warn_unused_ignores = true

# Pretty-print output
pretty = true

# Plugins
plugins = ["pydantic.mypy"]

# Disable error codes for known framework incompatibilities:
# - no-any-return: SQLAlchemy/passlib/jwt return Any from typed wrappers
# - arg-type: SQLAlchemy Column[T] vs T mismatch at runtime
# - assignment: SQLAlchemy Column[T] assignment from plain T
# - valid-type: PEP 695 generics not yet supported by mypy
# - type-arg: Missing type params for framework types (Request, dict)
# - attr-defined: SQLAlchemy dynamic model attributes (.id, .__tablename__)
disable_error_code = [
    "no-any-return",
    "arg-type",
    "assignment",
    "valid-type",
    "type-arg",
    "attr-defined",
]

# Paths to exclude from type checking
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.seed"
ignore_errors = false

[[tool.mypy.overrides]]
module = "src.*"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Show extra test information
addopts = "-v --tb=short"

# Markers for test categorization
markers = [
    "integration: integration tests",
    "unit: unit tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["src"]
omit = [
    "*/__init__.py",
    "*/seed.py",
]

[tool.coverage.report]
# Require 80% coverage (aspirational)
fail_under = 70
precision = 2
show_missing = true
